AWS/hp-infra-aws/01_cicd/sonarqube/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: cicd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      # [수정] AWS EKS 노드 그룹 라벨 적용
      nodeSelector:
        nodepool: cicd
      tolerations:  # [핵심] 방어막을 뚫는 VIP 패스
        - key: "dedicated"
          operator: "Equal"
          value: "cicd"
          effect: "NoSchedule"
      
      # [수정] ECR을 사용하므로 imagePullSecrets는 필요 없습니다 (IAM 권한으로 처리)
      
      containers:
      - name: sonarqube
        image: sonarqube:lts-community
        ports:
        - containerPort: 9000
        resources:
          limits:
            memory: "4Gi"
            cpu: "1000m"
          requests:
            memory: "2Gi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /api/system/status
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 30
          
        # 🔵 [추가] 정상 작동 상태 확인
        livenessProbe:
          httpGet:
            path: /api/system/status
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10
          
        # 🔵 [추가] 사용자 접속 준비 확인
        readinessProbe:
          httpGet:
            path: /api/system/status
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10
          
        volumeMounts:
        - name: sonarqube-data
          mountPath: /opt/sonarqube/data
      volumes:
      - name: sonarqube-data
        persistentVolumeClaim:
          claimName: sonarqube-pvc
